added new migration, updated category repo\manager\etc. and User model
