# PDKSWebServer/Managers/ICategoryManager.cs
@@ -1,11 +1,14 @@
-﻿using PDKSWebServer.Dtos;
+﻿using System;
 using System.Collections.Generic;
+using Microsoft.AspNetCore.Mvc;
+using PDKSWebServer.Dtos;
 
 namespace PDKSWebServer.Managers
 {
     interface ICategoryManager
     {
         IEnumerable<CategoryDto> GetCategories();
-        CategoryDto GetCategory(int id);
+        CategoryDto GetCategory(Int32 id);
+        ActionResult<Int32> AddCategory(CategoryDto category);
     }
 }
